--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -430,6 +430,8 @@ common common-options
                     -Wmissing-signatures
                     -fhide-source-paths
                     -- -Wmissing-export-lists
+                    -fhpc
+                    -hpcdir ./mixfiles/
 
   if impl(ghc >= 8.10)
     ghc-options:    -Wunused-packages
