--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -773,7 +773,8 @@ test-suite test-pandoc
                   text              >= 1.1.1.0 && < 2.1,
                   time              >= 1.5     && < 1.14,
                   xml               >= 1.3.12  && < 1.4,
-                  zip-archive       >= 0.4.3   && < 0.5
+                  zip-archive       >= 0.4.3   && < 0.5,
+                  tasty-coverage
   other-modules:  Tests.Old
                   Tests.Command
                   Tests.Helpers
