--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -430,6 +430,7 @@ common common-options
                     -Wmissing-signatures
                     -fhide-source-paths
                     -- -Wmissing-export-lists
+                    -fhpc
 
   if impl(ghc >= 8.10)
     ghc-options:    -Wunused-packages
@@ -449,7 +450,6 @@ common common-executable
 
 library xml-light
   import:        common-options
-  ghc-options:   -fhpc
   build-depends: xml                   >= 1.3.12   && < 1.4,
                  xml-conduit           >= 1.9.1.1  && < 1.10,
                  xml-types             >= 0.3      && < 0.4,
@@ -464,7 +464,6 @@ library xml-light
 
 library
   import:        common-options
-  ghc-options:   -fhpc
   build-depends: xml-light,
                  Glob                  >= 0.7      && < 0.11,
                  JuicyPixels           >= 3.1.6.1  && < 3.4,
